# hBN_PL

./: .gitignore  README.md  pyproject.toml
Data/All data/: 2025-11-17 15_34_06 sample5_DCMd2_1s_emitter1 2167.spe  2025-11-17 15_34_45 sample5_DCMd2_1s_emitter1 2168.spe  2025-11-17 15_40_58 sample5_DCMd2_200uw_emitter1 2170_cleaned.npz  2025-11-17 15_42_12 sample5_DCMd2_200uw_emitter1 2171_cleaned_averaged.npz  2025-11-17 15_44_26 sample5_DCMd2_200uw_background 2172.spe  2025-11-17 15_46_13 sample5_DCMd2_200uw_background_off flake 2173.spe  2025-11-17 16_02_57 sample5_DCMd2_200uw_emitter2 2174.spe  2025-11-17 16_03_42 sample5_DCMd2_200uw_emitter2 2175.spe  2025-11-17 16_04_50 sample5_DCMd2_200uw_emitter2 2176.spe  2025-11-17 16_10_04 sample5_DCMd2_200uw_emitter3 2177.spe  2025-11-17 16_11_05 sample5_DCMd2_200uw_emitter3 2178.spe  2025-11-17 16_29_50 sample5_DCMd2_200uw_emitter6 2184.spe  (+128 more)
data/: 2025-11-17 17_34_30 sample5_DCMd2_200uw_emitter11 2189_cleaned.npz  2025-11-17 17_34_30 sample5_DCMd2_200uw_emitter11 2189_cleaned_averaged.npz  2025-11-17 17_59_53 sample5_DCMd2_200uw_emitter17 2195.spe  2025-11-17 17_59_53 sample5_DCMd2_200uw_emitter17 2195_cleaned.npz  2025-11-17 17_59_53 sample5_DCMd2_200uw_emitter17 2195_cleaned_averaged.npz  2025-11-20 18_51_06 sample3_DCMd2_200uw_emitter14 2231_energy_normalised.npz
notebooks/: 002_hbn_analysis.ipynb  003_classification_emitters.ipynb  003_tara.ipynb  004_hbn_analysis.ipynb  004_peak_fitting.ipynb  005_applying_class.ipynb  006_demo.ipynb  classes.ipynb  magda_NEW_NOTEBOOK.ipynb  magda_notebook.ipynb
(+277 files in other folders)
