[project]
name = "hbn_pl"
version = "0.0.1"
description = "Simple hbn PL project for the PML course"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Liv Hawkins, Emma Huntley, Magda Glinka", email = "oh306@cam.ac.uk" }
]
dependencies = [
    "numpy",
    "matplotlib"
    "xmltodict"
    "spectrapepper"
]